--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASEAN: The Power Bloc | AZCTech Project</title>
+    <title>ASEAN 360: The Power Bloc | AZCTech Project</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;700&family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -132,7 +132,7 @@
                 </div>
                 <i class="fas fa-globe-asia text-4xl text-white absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></i>
             </div>
-            <h1 class="text-4xl font-serif font-bold text-white mb-2 tracking-[0.2em]">ASEAN<span class="text-neon-blue">ARCHIVE</span></h1>
+            <h1 class="text-4xl font-serif font-bold text-white mb-2 tracking-[0.2em]">ASEAN<span class="text-neon-blue">360</span></h1>
             <p class="text-gray-400 font-mono text-sm mb-8 typing-cursor">Initializing Geopolitical Data...</p>
             <button onclick="enterSite()" class="px-8 py-3 border border-neon-blue text-neon-blue hover:bg-neon-blue hover:text-black transition-all duration-300 font-bold tracking-wider uppercase rounded-sm">
                 Enter System
@@ -147,7 +147,7 @@
     <nav class="w-full md:w-64 glass-panel h-auto md:h-full z-50 flex flex-col justify-between shrink-0 border-r border-white/5">
         <div>
             <div class="p-8 border-b border-white/5">
-                <h1 class="font-serif font-bold text-2xl tracking-widest text-white">ASEAN<span class="text-neon-red">.IO</span></h1>
+                <h1 class="font-serif font-bold text-2xl tracking-widest text-white">ASEAN<span class="text-neon-red">360</span></h1>
                 <p class="text-[10px] text-gray-500 font-mono mt-1">RESEARCH UNIT: XII-T/V</p>
             </div>
 
@@ -193,7 +193,11 @@
             <div class="max-w-7xl mx-auto">
                 <!-- Hero Banner -->
                 <div class="relative h-[50vh] rounded-2xl overflow-hidden mb-12 border border-white/10 shadow-2xl">
-                    <img src="https://images.unsplash.com/photo-1516733968668-dbdce39c4651?q=80&w=2000&auto=format&fit=crop" class="absolute inset-0 w-full h-full object-cover opacity-60 animate-pulse-slow" alt="Network">
+                    <!-- [USER EDIT]: HOME BANNER LINK - Replace the src URL below -->
+                    <img src="https://images.unsplash.com/photo-1516733968668-dbdce39c4651?q=80&w=2000&auto=format&fit=crop" 
+                         class="absolute inset-0 w-full h-full object-cover opacity-60 animate-pulse-slow" 
+                         alt="Network">
+                    
                     <div class="absolute inset-0 bg-gradient-to-t from-[#050510] via-transparent to-transparent"></div>
                     
                     <div class="absolute bottom-0 left-0 p-12 z-10 w-full">
@@ -233,9 +237,31 @@
                     </div>
                 </div>
 
-                <!-- 3 Pillars Section -->
+                <!-- NEW SECTION: ASEAN ACHIEVEMENTS -->
+                <div class="mb-16">
+                    <h2 class="text-3xl font-serif text-white mb-8 border-l-4 border-neon-gold pl-4">ASEAN Achievements</h2>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                        <div class="glass-panel p-6 rounded-2xl group hover:border-neon-gold transition-colors">
+                            <i class="fas fa-dove text-neon-gold text-2xl mb-4"></i>
+                            <h3 class="text-xl font-bold text-white mb-2">Regional Peace</h3>
+                            <p class="text-gray-400 text-sm">Successfully prevented major interstate conflict for 50+ years through the Treaty of Amity and Cooperation (TAC) and ZOPFAN.</p>
+                        </div>
+                        <div class="glass-panel p-6 rounded-2xl group hover:border-neon-blue transition-colors">
+                            <i class="fas fa-globe text-neon-blue text-2xl mb-4"></i>
+                            <h3 class="text-xl font-bold text-white mb-2">Global Centrality</h3>
+                            <p class="text-gray-400 text-sm">Established itself as the primary convener of world powers through forums like the East Asia Summit (EAS) and ARF.</p>
+                        </div>
+                        <div class="glass-panel p-6 rounded-2xl group hover:border-neon-purple transition-colors">
+                            <i class="fas fa-chart-line text-neon-purple text-2xl mb-4"></i>
+                            <h3 class="text-xl font-bold text-white mb-2">Economic Integration</h3>
+                            <p class="text-gray-400 text-sm">Eliminated tariffs on 98% of goods (ATIGA) and spearheaded the RCEP, creating the world's largest free trade area.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- RENAMED SECTION: ASEAN COMMUNITIES -->
                 <div class="mb-12">
-                    <h2 class="text-2xl font-serif text-white mb-8 border-l-4 border-neon-blue pl-4">The Three Community Pillars</h2>
+                    <h2 class="text-2xl font-serif text-white mb-8 border-l-4 border-neon-blue pl-4">ASEAN Communities (The 3 Pillars)</h2>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                         <!-- Security -->
                         <div class="glass-panel p-8 rounded-2xl relative overflow-hidden group hover:-translate-y-2 transition-transform duration-500">
@@ -496,9 +522,9 @@
                 <div class="flex flex-wrap justify-center gap-8">
                     <!-- Arahant -->
                     <div class="w-72 glass-panel p-8 rounded-2xl border border-white/5 hover:border-neon-purple/50 transition-all duration-300 group">
-                        <div class="w-24 h-24 rounded-full border-2 border-neon-purple mx-auto mb-6 p-1 relative">
-                            <div class="w-full h-full rounded-full bg-neon-purple/20 flex items-center justify-center text-2xl font-bold text-white">AS</div>
-                            <div class="absolute inset-0 rounded-full border border-neon-purple animate-ping opacity-20"></div>
+                        <div class="w-24 h-24 rounded-full border-2 border-neon-purple mx-auto mb-6 overflow-hidden">
+                            <!-- [USER EDIT]: PASTE ARAHANT'S PHOTO LINK BELOW (Replace existing src) -->
+                            <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=300&auto=format&fit=crop" class="w-full h-full object-cover" alt="Arahant">
                         </div>
                         <h3 class="text-2xl font-bold text-white">Arahant Singh</h3>
                         <p class="text-neon-purple text-xs font-bold tracking-widest uppercase mb-4">Lead Developer & Architect</p>
@@ -511,8 +537,9 @@
 
                     <!-- Shreeya -->
                     <div class="w-72 glass-panel p-8 rounded-2xl border border-white/5 hover:border-neon-red/50 transition-all duration-300 group">
-                         <div class="w-24 h-24 rounded-full border-2 border-neon-red mx-auto mb-6 p-1">
-                            <div class="w-full h-full rounded-full bg-neon-red/20 flex items-center justify-center text-2xl font-bold text-white">SK</div>
+                         <div class="w-24 h-24 rounded-full border-2 border-neon-red mx-auto mb-6 overflow-hidden">
+                             <!-- [USER EDIT]: PASTE SHREEYA'S PHOTO LINK BELOW -->
+                            <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=300&auto=format&fit=crop" class="w-full h-full object-cover" alt="Shreeya">
                         </div>
                         <h3 class="text-2xl font-bold text-white">Shreeya Kakkar</h3>
                         <p class="text-neon-red text-xs font-bold tracking-widest uppercase mb-4">Senior Analyst</p>
@@ -525,8 +552,9 @@
 
                      <!-- Aryaman -->
                      <div class="w-72 glass-panel p-8 rounded-2xl border border-white/5 hover:border-neon-blue/50 transition-all duration-300 group">
-                        <div class="w-24 h-24 rounded-full border-2 border-neon-blue mx-auto mb-6 p-1">
-                           <div class="w-full h-full rounded-full bg-neon-blue/20 flex items-center justify-center text-2xl font-bold text-white">AP</div>
+                        <div class="w-24 h-24 rounded-full border-2 border-neon-blue mx-auto mb-6 overflow-hidden">
+                            <!-- [USER EDIT]: PASTE ARYAMAN'S PHOTO LINK BELOW -->
+                           <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=300&auto=format&fit=crop" class="w-full h-full object-cover" alt="Aryaman">
                        </div>
                        <h3 class="text-2xl font-bold text-white">Aryaman Pathak</h3>
                        <p class="text-neon-blue text-xs font-bold tracking-widest uppercase mb-4">Economic Strategist</p>
@@ -539,8 +567,9 @@
 
                     <!-- Ridhi -->
                     <div class="w-72 glass-panel p-8 rounded-2xl border border-white/5 hover:border-neon-gold/50 transition-all duration-300 group">
-                        <div class="w-24 h-24 rounded-full border-2 border-neon-gold mx-auto mb-6 p-1">
-                           <div class="w-full h-full rounded-full bg-neon-gold/20 flex items-center justify-center text-2xl font-bold text-white">RG</div>
+                        <div class="w-24 h-24 rounded-full border-2 border-neon-gold mx-auto mb-6 overflow-hidden">
+                           <!-- [USER EDIT]: PASTE RIDHI'S PHOTO LINK BELOW -->
+                           <img src="https://images.unsplash.com/photo-1590650153855-d9e808231d41?q=80&w=300&auto=format&fit=crop" class="w-full h-full object-cover" alt="Ridhi">
                        </div>
                        <h3 class="text-2xl font-bold text-white">Ridhi Goel</h3>
                        <p class="text-neon-gold text-xs font-bold tracking-widest uppercase mb-4">Security Analyst</p>
@@ -553,8 +582,9 @@
 
                    <!-- Vineet -->
                    <div class="w-72 glass-panel p-8 rounded-2xl border border-white/5 hover:border-green-500/50 transition-all duration-300 group">
-                        <div class="w-24 h-24 rounded-full border-2 border-green-500 mx-auto mb-6 p-1">
-                           <div class="w-full h-full rounded-full bg-green-500/20 flex items-center justify-center text-2xl font-bold text-white">VM</div>
+                        <div class="w-24 h-24 rounded-full border-2 border-green-500 mx-auto mb-6 overflow-hidden">
+                           <!-- [USER EDIT]: PASTE VINEET'S PHOTO LINK BELOW -->
+                           <img src="https://images.unsplash.com/photo-1537511446984-935f663eb1f4?q=80&w=300&auto=format&fit=crop" class="w-full h-full object-cover" alt="Vineet">
                        </div>
                        <h3 class="text-2xl font-bold text-white">Vineet Mishra</h3>
                        <p class="text-green-500 text-xs font-bold tracking-widest uppercase mb-4">Regional Specialist</p>
