--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                      <div class="w-72 glass-panel p-8 rounded-2xl border border-white/5 hover:border-neon-blue/50 transition-all duration-300 group">
                         <div class="w-24 h-24 rounded-full border-2 border-neon-blue mx-auto mb-6 overflow-hidden">
                             <!-- [UPDATED IMAGE] -->
-                           <img src="https://i.ibb.co/dsLgh7hM/image.png" class="w-full h-full object-cover" alt="Aryaman">
+                           <img src="https://i.ibb.co/fYcmR2bD/image.png" class="w-full h-full object-cover" alt="Aryaman">
                        </div>
                        <h3 class="text-2xl font-bold text-white">Aryaman Pathak</h3>
                        <p class="text-neon-blue text-xs font-bold tracking-widest uppercase mb-4">Economic Strategist</p>
@@ -601,8 +601,8 @@
                     <!-- Ridhi -->
                     <div class="w-72 glass-panel p-8 rounded-2xl border border-white/5 hover:border-neon-gold/50 transition-all duration-300 group">
                         <div class="w-24 h-24 rounded-full border-2 border-neon-gold mx-auto mb-6 overflow-hidden">
-                           <!-- [USER EDIT]: PASTE RIDHI'S PHOTO LINK BELOW -->
-                           <img src="https://images.unsplash.com/photo-1590650153855-d9e808231d41?q=80&w=300&auto=format&fit=crop" class="w-full h-full object-cover" alt="Ridhi">
+                           <!-- [UPDATED IMAGE] -->
+                           <img src="https://i.ibb.co/tpn2jFBj/image.png" class="w-full h-full object-cover" alt="Ridhi">
                        </div>
                        <h3 class="text-2xl font-bold text-white">Ridhi Goel</h3>
                        <p class="text-neon-gold text-xs font-bold tracking-widest uppercase mb-4">Security Analyst</p>
