--- a/index.html
+++ b/index.html
@@ -35,11 +35,17 @@
                         'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
                         'float': 'float 6s ease-in-out infinite',
                         'spin-slow': 'spin 12s linear infinite',
+                        'fade-out-delay': 'fadeOutDelay 2.5s forwards',
                     },
                     keyframes: {
                         float: {
                             '0%, 100%': { transform: 'translateY(0)' },
                             '50%': { transform: 'translateY(-20px)' },
+                        },
+                        fadeOutDelay: {
+                            '0%': { opacity: '1' },
+                            '70%': { opacity: '1' },
+                            '100%': { opacity: '0', visibility: 'hidden' },
                         }
                     }
                 }
@@ -182,7 +188,7 @@
                     <i class="fas fa-play-circle w-5 group-hover:text-green-400 transition-colors"></i> <span class="font-medium tracking-wide">Media Hub</span>
                 </button>
                 <button onclick="switchPage('ai')" id="nav-ai" class="nav-item w-full text-left p-3 rounded hover:bg-white/5 transition-all flex items-center gap-4 text-gray-400 group">
-                    <i class="fas fa-robot w-5 group-hover:text-blue-400 transition-colors"></i> <span class="font-medium tracking-wide">AI Research</span>
+                    <i class="fas fa-robot w-5 group-hover:text-blue-400 transition-colors"></i> <span class="font-medium tracking-wide">AZC Intelligence</span>
                 </button>
                 <button onclick="switchPage('team')" id="nav-team" class="nav-item w-full text-left p-3 rounded hover:bg-white/5 transition-all flex items-center gap-4 text-gray-400 group">
                     <i class="fas fa-code w-5 group-hover:text-gray-100 transition-colors"></i> <span class="font-medium tracking-wide">Developers</span>
@@ -525,32 +531,86 @@
              </div>
         </section>
 
-        <!-- PAGE: AI BOT -->
-        <section id="ai" class="page-section h-screen p-8 hidden flex flex-col">
-            <div class="max-w-5xl mx-auto w-full h-[85vh] flex flex-col glass-panel rounded-2xl overflow-hidden border border-neon-blue/30 shadow-[0_0_50px_rgba(0,243,255,0.1)]">
-                <!-- Terminal Header -->
-                <div class="bg-[#0f111a] p-4 flex items-center justify-between border-b border-white/10">
-                    <div class="flex items-center gap-3">
-                        <div class="flex gap-2">
-                            <div class="w-3 h-3 rounded-full bg-red-500"></div>
-                            <div class="w-3 h-3 rounded-full bg-yellow-500"></div>
-                            <div class="w-3 h-3 rounded-full bg-green-500"></div>
-                        </div>
-                        <span class="ml-4 font-mono text-xs text-neon-blue animate-pulse">● LIVE_CONNECTION</span>
-                    </div>
-                    <div class="text-right">
-                        <h3 class="font-bold text-sm text-white tracking-widest">POWERED BY <span class="text-neon-purple">AZCTech</span></h3>
-                    </div>
-                </div>
+        <!-- PAGE: AI BOT (STARTUP STYLE) -->
+        <section id="ai" class="page-section h-screen p-8 hidden flex flex-col relative overflow-hidden">
+            <!-- Background Grid -->
+            <div class="absolute inset-0 bg-[linear-gradient(rgba(0,243,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,243,255,0.03)_1px,transparent_1px)] bg-[size:40px_40px] [mask-image:radial-gradient(ellipse_at_center,black_40%,transparent_80%)] pointer-events-none"></div>
+
+            <div class="max-w-6xl mx-auto w-full h-full flex flex-col md:flex-row gap-6 relative z-10">
                 
-                <!-- Bot Embed -->
-                <div class="flex-1 bg-black/40 relative">
-                     <zapier-interfaces-chatbot-embed is-popup='false' chatbot-id='cmkwi1es9014bum1duy98j1cy' height='100%' width='100%' class="w-full h-full block"></zapier-interfaces-chatbot-embed>
+                <!-- Left Panel: Startup Pitch / Info -->
+                <div class="w-full md:w-1/3 flex flex-col justify-center space-y-6">
+                    <div class="glass-panel p-8 rounded-2xl border-l-4 border-neon-blue relative overflow-hidden group">
+                        <div class="absolute top-0 right-0 p-4 opacity-20">
+                            <i class="fas fa-brain text-6xl text-neon-blue"></i>
+                        </div>
+                        <h2 class="text-4xl font-serif font-bold text-white mb-2">AZC<span class="text-neon-blue">INTELLIGENCE</span></h2>
+                        <p class="text-neon-blue font-mono text-xs tracking-[0.3em] uppercase mb-6">PROJECT: OMNISCIENCE</p>
+                        <p class="text-gray-400 text-sm leading-relaxed mb-6 font-light">
+                            Deploying advanced language models to synthesize geopolitical data in real-time. Ask anything about ASEAN trade, history, or treaties.
+                        </p>
+                        <div class="flex items-center gap-4 text-xs font-mono text-gray-500">
+                            <div class="flex items-center gap-2">
+                                <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span> v2.4.0 Stable
+                            </div>
+                            <div>|</div>
+                            <div>Latency: 12ms</div>
+                        </div>
+                    </div>
+
+                    <!-- System Stats -->
+                    <div class="grid grid-cols-2 gap-4">
+                        <div class="glass-panel p-4 rounded-xl border border-white/5">
+                            <p class="text-[10px] text-gray-500 uppercase mb-1">Knowledge Base</p>
+                            <p class="text-xl font-bold text-white">1967-2026</p>
+                        </div>
+                        <div class="glass-panel p-4 rounded-xl border border-white/5">
+                            <p class="text-[10px] text-gray-500 uppercase mb-1">Security Level</p>
+                            <p class="text-xl font-bold text-neon-purple">Encrypted</p>
+                        </div>
+                    </div>
                 </div>
 
-                <!-- Footer Credit -->
-                <div class="bg-[#0f111a] p-2 text-center border-t border-white/10">
-                    <p class="text-[10px] text-gray-500 font-mono">SYSTEM ARCHITECT: ARAHANT SINGH | AZCTECH LABS</p>
+                <!-- Right Panel: The Interface -->
+                <div class="w-full md:w-2/3 h-full pb-8">
+                    <div class="h-full flex flex-col glass-panel rounded-2xl overflow-hidden border border-neon-blue/30 shadow-[0_0_50px_rgba(0,243,255,0.15)] relative">
+                        <!-- Holographic Corner Accents -->
+                        <div class="absolute top-0 left-0 w-16 h-16 border-t-2 border-l-2 border-neon-blue rounded-tl-2xl opacity-50"></div>
+                        <div class="absolute top-0 right-0 w-16 h-16 border-t-2 border-r-2 border-neon-blue rounded-tr-2xl opacity-50"></div>
+                        <div class="absolute bottom-0 left-0 w-16 h-16 border-b-2 border-l-2 border-neon-blue rounded-bl-2xl opacity-50"></div>
+                        <div class="absolute bottom-0 right-0 w-16 h-16 border-b-2 border-r-2 border-neon-blue rounded-br-2xl opacity-50"></div>
+
+                        <!-- Terminal Header -->
+                        <div class="bg-[#0f111a]/90 backdrop-blur-md p-4 flex items-center justify-between border-b border-white/10 z-10">
+                            <div class="flex items-center gap-3">
+                                <div class="flex gap-2">
+                                    <div class="w-3 h-3 rounded-full bg-red-500/50"></div>
+                                    <div class="w-3 h-3 rounded-full bg-yellow-500/50"></div>
+                                    <div class="w-3 h-3 rounded-full bg-green-500"></div>
+                                </div>
+                                <span class="ml-4 font-mono text-xs text-neon-blue animate-pulse">● AZC_LINK_ESTABLISHED</span>
+                            </div>
+                            <div class="text-right flex items-center gap-2">
+                                <i class="fas fa-wifi text-xs text-gray-500"></i>
+                                <span class="font-bold text-xs text-gray-400 tracking-widest">AZCTech</span>
+                            </div>
+                        </div>
+                        
+                        <!-- Bot Embed -->
+                        <div class="flex-1 bg-black/40 relative z-0">
+                             <!-- Loading Overlay (Fades out) -->
+                             <div class="absolute inset-0 bg-black flex items-center justify-center pointer-events-none z-50 animate-fade-out-delay">
+                                <div class="font-mono text-neon-blue text-sm tracking-widest">INITIALIZING NEURAL PATHWAYS...</div>
+                             </div>
+                             <zapier-interfaces-chatbot-embed is-popup='false' chatbot-id='cmkwi1es9014bum1duy98j1cy' height='100%' width='100%' class="w-full h-full block"></zapier-interfaces-chatbot-embed>
+                        </div>
+
+                        <!-- Footer Credit -->
+                        <div class="bg-[#0f111a]/90 p-2 flex justify-between px-4 border-t border-white/10 text-[10px] font-mono text-gray-500">
+                            <span>ARCHITECT: ARAHANT SINGH</span>
+                            <span>SESSION ID: 0X892-ALPHA</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
