--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                 <div class="relative h-[50vh] rounded-2xl overflow-hidden mb-12 border border-white/10 shadow-2xl">
                     <!-- VIDEO BACKGROUND -->
                     <div class="video-docker absolute top-0 left-0 w-full h-full overflow-hidden">
-                        <!-- Updated to Google Drive Link -->
+                        <!-- Reverted to YouTube Link (Home Banner) -->
                         <iframe 
-                            src="https://drive.google.com/file/d/13nEVer4ddbFO6aG7ySKO_eewFuCBt6P4/preview?autoplay=1&mute=1" 
+                            src="https://www.youtube.com/embed/Tski8ts7u-k?autoplay=1&mute=1&controls=0&loop=1&playlist=Tski8ts7u-k&showinfo=0&rel=0&iv_load_policy=3&modestbranding=1" 
                             frameborder="0" 
                             allow="autoplay; encrypted-media" 
                             allowfullscreen>
@@ -1118,8 +1118,8 @@
             if(pageId === 'ai') {
                 introLayer.classList.remove('hidden');
                 introLayer.style.opacity = '1';
-                // Play Intro - Using Google Drive Link
-                introVideo.src = "https://drive.google.com/file/d/1G0cnQrZJWriDPISVV6121owFS52O8BH3/preview?autoplay=1"; 
+                // Play Intro - Using YouTube Embed (with sound)
+                introVideo.src = "https://www.youtube.com/embed/CHy9NSgEsWA?autoplay=1&controls=0&showinfo=0&rel=0&iv_load_policy=3&modestbranding=1"; 
                 
                 // Fade out after 20 seconds
                 setTimeout(() => {
