--- a/index.html
+++ b/index.html
@@ -396,29 +396,8 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6" id="member-grid">
                     <!-- Cards Injected via JS -->
                 </div>
-
-                <!-- Timor Leste Special -->
-                <div class="mt-16 glass-panel p-1 rounded-2xl bg-gradient-to-r from-gray-800 to-gray-900">
-                    <div class="bg-[#050510] p-8 rounded-xl flex flex-col md:flex-row items-center gap-8">
-                        <div class="relative w-full md:w-48 h-32 rounded-lg overflow-hidden shadow-2xl">
-                             <img src="https://flagcdn.com/w640/tl.png" class="w-full h-full object-cover" alt="Timor Leste">
-                             <div class="absolute inset-0 bg-black/20"></div>
-                        </div>
-                        <div class="flex-1">
-                            <h3 class="text-2xl font-bold text-white flex items-center gap-3">
-                                Timor-Leste 
-                                <span class="px-2 py-1 bg-yellow-500/20 text-yellow-500 text-[10px] uppercase tracking-wider rounded border border-yellow-500/30">Candidate</span>
-                            </h3>
-                            <p class="text-gray-400 mt-2 mb-4 text-sm leading-relaxed">
-                                Officially applied for membership in 2011. Admitted in principle in 2022. Currently holding "Observer" status while fulfilling the roadmap for full integration.
-                            </p>
-                            <div class="flex items-center gap-2 text-xs font-mono text-gray-500">
-                                <span class="w-2 h-2 bg-yellow-500 rounded-full animate-pulse"></span>
-                                Research Status: ONGOING (Vineet Mishra)
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
+                <!-- NOTE: Timor-Leste is now integrated into the main grid via JS below -->
             </div>
         </section>
 
@@ -517,6 +496,18 @@
                             <div class="bg-white/5 p-3 rounded">
                                 <h5 class="text-sm font-bold text-white">Myanmar Crisis</h5>
                                 <p class="text-xs text-gray-400 mt-1">Internal political instability tests the "Non-Interference" principle.</p>
+                            </div>
+                            <div class="bg-white/5 p-3 rounded">
+                                <h5 class="text-sm font-bold text-white">Thailand-Cambodia Crisis</h5>
+                                <p class="text-xs text-gray-400 mt-1">Historical border disputes over the Preah Vihear Temple region have periodically strained relations.</p>
+                            </div>
+                            <div class="bg-white/5 p-3 rounded">
+                                <h5 class="text-sm font-bold text-white">Transboundary Haze</h5>
+                                <p class="text-xs text-gray-400 mt-1">Annual smoke from forest fires in Indonesia affects air quality in Singapore and Malaysia.</p>
+                            </div>
+                            <div class="bg-white/5 p-3 rounded">
+                                <h5 class="text-sm font-bold text-white">Cybersecurity Threats</h5>
+                                <p class="text-xs text-gray-400 mt-1">Rising online scams and cyber-trafficking operations in the Mekong region.</p>
                             </div>
                         </div>
                     </div>
@@ -971,6 +962,15 @@
                 desc: "Home to Angkor Wat. It has a rapidly growing garment and tourism sector, having rebuilt after the Khmer Rouge era.",
                 political: "Constitutional monarchy dominant-party system. It has very close economic and military ties with Beijing.",
                 relation: "The outlier. Cambodia has occasionally blocked ASEAN consensus statements on the South China Sea to support its ally China, causing internal friction."
+            },
+            { 
+                name: "Timor-Leste", 
+                joined: "2025 (Member)", 
+                student: "Vineet Mishra", 
+                flag: "tl", 
+                desc: "Timor-Leste is an Island country in Southeast Asia.",
+                political: "It is a semi presidential republic with the president as the head of the state and prime minister as the head of the government. The Economy is heavily dependent on petroleum resources from the Timor Sea providing majority of the revenue to the governement.",
+                relation: "Timor-Leste became the official member of ASEAN in October 2025. It cooperates with member states of ASEAN in various areas like Culture Exchange Programs and Security Dialogues."
             },
         ];
 
