--- a/index.html
+++ b/index.html
@@ -780,6 +780,20 @@
                    </div>
 
                 </div>
+
+                <!-- ACKNOWLEDGEMENT SECTION -->
+                <div class="mt-24 max-w-3xl mx-auto">
+                    <div class="glass-panel p-10 rounded-2xl border-t-4 border-neon-blue relative overflow-hidden shadow-2xl">
+                        <div class="absolute top-0 right-0 p-6 opacity-10">
+                            <i class="fas fa-graduation-cap text-8xl text-white"></i>
+                        </div>
+                        <h3 class="text-3xl font-serif font-bold text-white mb-6">Acknowledgement</h3>
+                        <p class="text-gray-300 text-lg leading-relaxed font-light italic">
+                            "We want to thank our Principal, <span class="text-neon-blue font-bold not-italic">Mr. Anil Kumar</span>, who granted us this opportunity to present this project, our Vice-Principals who guided us, and our Political Science Teacher, <span class="text-neon-purple font-bold not-italic">Mrs. Swati Verma</span>, who guided us and helped us execute this project."
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </section>
 
