--- a/index.html
+++ b/index.html
@@ -656,21 +656,41 @@
                     <p class="text-gray-400 font-mono text-xs md:text-sm">DOCUMENTARY FOOTAGE & EXPLAINERS</p>
                 </header>
 
-                <div class="glass-panel p-4 rounded-2xl shadow-2xl border border-neon-blue/30 max-w-4xl mx-auto">
-                    <!-- Video Container -->
-                    <div class="relative w-full pb-[56.25%] rounded-xl overflow-hidden bg-black">
-                        <!-- Using a generic educational placeholder if specific ID fails, but here is a relevant one -->
-                        <iframe class="absolute top-0 left-0 w-full h-full" 
-                                src="https://www.youtube.com/embed/H2q4f6479IA?si=GeopoliticsExplained" 
-                                title="YouTube video player" 
-                                frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                allowfullscreen>
-                        </iframe>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <!-- Video 1 -->
+                    <div class="glass-panel p-4 rounded-2xl shadow-2xl border border-neon-blue/30 w-full hover:border-neon-blue transition-colors duration-300">
+                        <!-- Video Container -->
+                        <div class="relative w-full pb-[56.25%] rounded-xl overflow-hidden bg-black">
+                            <iframe class="absolute top-0 left-0 w-full h-full" 
+                                    src="https://www.youtube.com/embed/H2q4f6479IA?si=GeopoliticsExplained" 
+                                    title="YouTube video player" 
+                                    frameborder="0" 
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen>
+                            </iframe>
+                        </div>
+                        <div class="p-4 md:p-6">
+                            <h3 class="text-lg md:text-xl font-bold text-white">Understanding ASEAN: The Geopolitics</h3>
+                            <p class="text-gray-400 text-xs md:text-sm mt-2">A comprehensive look at how the Association of Southeast Asian Nations functions as a geopolitical entity.</p>
+                        </div>
                     </div>
-                    <div class="p-4 md:p-6">
-                        <h3 class="text-lg md:text-xl font-bold text-white">Understanding ASEAN: The Geopolitics</h3>
-                        <p class="text-gray-400 text-xs md:text-sm mt-2">A comprehensive look at how the Association of Southeast Asian Nations functions as a geopolitical entity.</p>
+
+                    <!-- Video 2 (New) -->
+                    <div class="glass-panel p-4 rounded-2xl shadow-2xl border border-neon-purple/30 w-full hover:border-neon-purple transition-colors duration-300">
+                        <!-- Video Container -->
+                        <div class="relative w-full pb-[56.25%] rounded-xl overflow-hidden bg-black">
+                            <iframe class="absolute top-0 left-0 w-full h-full" 
+                                    src="https://www.youtube.com/embed/XbyWCwGHhTw" 
+                                    title="YouTube video player" 
+                                    frameborder="0" 
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen>
+                            </iframe>
+                        </div>
+                        <div class="p-4 md:p-6">
+                            <h3 class="text-lg md:text-xl font-bold text-white">The ASEAN Miracle</h3>
+                            <p class="text-gray-400 text-xs md:text-sm mt-2">An insightful overview of ASEAN's history, economic growth, and its unique approach to regional cooperation.</p>
+                        </div>
                     </div>
                 </div>
             </div>
