--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div class="glass-panel p-6 rounded-xl border border-red-500/20">
                         <h4 class="text-lg font-bold text-red-400 mb-4 flex items-center gap-2"><i class="fas fa-exclamation-triangle"></i> Strategic Challenges</h4>
-                        <div class="space-y-4">
+                        <div class="space-y-4 h-96 overflow-y-auto pr-2 custom-scrollbar">
                             <div class="bg-white/5 p-3 rounded">
                                 <h5 class="text-sm font-bold text-white">South China Sea</h5>
                                 <p class="text-xs text-gray-400 mt-1">Overlapping territorial claims with China threaten regional unity.</p>
@@ -617,30 +617,46 @@
                                 <p class="text-xs text-gray-400 mt-1">Internal political instability tests the "Non-Interference" principle.</p>
                             </div>
                             <div class="bg-white/5 p-3 rounded">
-                                <h5 class="text-sm font-bold text-white">Thailand-Cambodia Crisis</h5>
-                                <p class="text-xs text-gray-400 mt-1">Historical border disputes over the Preah Vihear Temple region have periodically strained relations.</p>
+                                <h5 class="text-sm font-bold text-white">Infrastructure & Digital Divide</h5>
+                                <p class="text-xs text-gray-400 mt-1">Uneven digital infrastructure development creates gaps, particularly in rural or island areas.</p>
+                            </div>
+                            <div class="bg-white/5 p-3 rounded">
+                                <h5 class="text-sm font-bold text-white">Skill Gaps</h5>
+                                <p class="text-xs text-gray-400 mt-1">A shortage of skilled workers threatens to slow down the adoption of advanced technology and AI.</p>
+                            </div>
+                            <div class="bg-white/5 p-3 rounded">
+                                <h5 class="text-sm font-bold text-white">Sustainability Hurdles</h5>
+                                <p class="text-xs text-gray-400 mt-1">Many member states are struggling to meet Sustainable Development Goals (SDGs) by 2030.</p>
                             </div>
                             <div class="bg-white/5 p-3 rounded">
                                 <h5 class="text-sm font-bold text-white">Transboundary Haze</h5>
                                 <p class="text-xs text-gray-400 mt-1">Annual smoke from forest fires in Indonesia affects air quality in Singapore and Malaysia.</p>
-                            </div>
-                            <div class="bg-white/5 p-3 rounded">
-                                <h5 class="text-sm font-bold text-white">Cybersecurity Threats</h5>
-                                <p class="text-xs text-gray-400 mt-1">Rising online scams and cyber-trafficking operations in the Mekong region.</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="glass-panel p-6 rounded-xl border border-green-500/20">
                         <h4 class="text-lg font-bold text-green-400 mb-4 flex items-center gap-2"><i class="fas fa-rocket"></i> Future Potential</h4>
-                        <div class="space-y-4">
+                        <div class="space-y-4 h-96 overflow-y-auto pr-2 custom-scrollbar">
                             <div class="bg-white/5 p-3 rounded">
-                                <h5 class="text-sm font-bold text-white">Digital Economy</h5>
-                                <p class="text-xs text-gray-400 mt-1">Projected to reach $1 Trillion by 2030, driven by a young tech-savvy population.</p>
+                                <h5 class="text-sm font-bold text-white">4th Largest Economy (2030)</h5>
+                                <p class="text-xs text-gray-400 mt-1">Projected to become the world's 4th largest economy, driven by a booming digital sector and young workforce.</p>
                             </div>
                             <div class="bg-white/5 p-3 rounded">
-                                <h5 class="text-sm font-bold text-white">ASEAN Centrality</h5>
-                                <p class="text-xs text-gray-400 mt-1">The strategic anchor for the Indo-Pacific, balancing US and Chinese interests.</p>
+                                <h5 class="text-sm font-bold text-white">Digital Economy (DEFA)</h5>
+                                <p class="text-xs text-gray-400 mt-1">Expected to unlock $2 Trillion by 2030 by harmonizing digital regulations and enhancing cross-border payments.</p>
+                            </div>
+                            <div class="bg-white/5 p-3 rounded">
+                                <h5 class="text-sm font-bold text-white">Green Transition & Minerals</h5>
+                                <p class="text-xs text-gray-400 mt-1">Central to the global energy transition with critical nickel/cobalt reserves attracting EV supply chains.</p>
+                            </div>
+                            <div class="bg-white/5 p-3 rounded">
+                                <h5 class="text-sm font-bold text-white">Supply Chain Relocation</h5>
+                                <p class="text-xs text-gray-400 mt-1">Benefiting from "China + 1" strategies as firms move manufacturing to Southeast Asia for lower costs and stability.</p>
+                            </div>
+                            <div class="bg-white/5 p-3 rounded">
+                                <h5 class="text-sm font-bold text-white">Vision 2045</h5>
+                                <p class="text-xs text-gray-400 mt-1">Aims for a resilient, innovative, and deeply integrated community that is the epicenter of growth in the Indo-Pacific.</p>
                             </div>
                         </div>
                     </div>
